# snake-console-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  Config.h  Direction.h  Food.h  Point.h  Renderer.h  Snake.h
src/: Board.cpp  Food.cpp  Renderer.cpp  Snake.cpp  main.cpp
